[fix] trim whitespace from content [add] repair content with Tidy [fix] add subcolumns-div to cluster, and fix inner content classes

--- a/extensions/components/site/sites/lod2/css/content.css
+++ b/extensions/components/site/sites/lod2/css/content.css
@@ -138,7 +138,16 @@
 
   /* -- 1.4. Images -- */
 
-  img.depiction
+  .maincontent img
+  {
+      /* standard for images in articles */
+
+      float:left;
+      max-width: 50%;
+      margin: 0 0.75em 0.5em 0;
+  }
+
+  .maincontent img.depiction
   {
       display:block;
       float: right;
